<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDD"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_do_produto"
        android:textColor="@color/black"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_valor_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="12dp"
            android:background="#ffffff"
            android:hint="@string/simbolo_reais"
            android:inputType="numberDecimal"
            android:padding="8dp"

            android:textAlignment="textEnd"
            android:textSize="30sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxa_do_delivery"
        android:textColor="@color/black"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_porcrentagem_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="12dp"
            android:background="#ffffff"
            android:hint="@string/porcentagem"
            android:inputType="number"
            android:padding="8dp"

            android:textAlignment="textEnd"
            android:textSize="30sp" />
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_ideal_de_venda"
        android:textColor="@color/black"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_valor_ideal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="#ffffff"
            android:hint="@string/valor_reais"
            android:padding="8dp"
            android:textAlignment="textEnd"
            android:textSize="30sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calcular"
        android:textSize="16sp" />

</LinearLayout>